fixed banner hidden under other elements

--- a/project_go/static/css/style.css
+++ b/project_go/static/css/style.css
@@ -518,6 +518,7 @@ input, select {
 .banner-right, .banner-left {
     position: absolute;
     top: 45px;
+    z-index: 1;
 }
 
 .banner-right {
